tests/parser/fail/test_cond_if_error/test_cond_if_error.err
test_cond_if_error.c:9:7: error: Expected ) but got ;
	if (a; b){
	     ^^^^
1 error(s)
